Fixed text wrap
Fixes #2239

--- a/src/main/external-resources/web/web.css
+++ b/src/main/external-resources/web/web.css
@@ -512,6 +512,7 @@ form#SearchForm {
 
 .mediaInfo h1 {
 	margin-bottom: 30px;
+	overflow-wrap: break-word;
 }
 
 .mediaInfo h1 > a {
